fix: PR-346: Fix sidebar overflow

--- a/src/app/voice-assistant-personality/voice-assistant-personality.component.css
+++ b/src/app/voice-assistant-personality/voice-assistant-personality.component.css
@@ -59,7 +59,7 @@ textarea:focus {
     color: #fff;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1310px) {
     .allContent {
         display: block;
     }
