--- a/src/app/voice-assistant-sidebar-right/voice-assistant-sidebar-right.component.css
+++ b/src/app/voice-assistant-sidebar-right/voice-assistant-sidebar-right.component.css
@@ -1,45 +1,52 @@
 .bg-navigation-Kopie {
     height: 500px;
-    margin-right: 4px;
-    padding: 0;
+    width: auto;
     background-color: #1b2b44;
-    max-width: 100%;
+}
+.body {
+    height: 445px;
+    overflow-y: scroll;
+}
+
+::-webkit-scrollbar {
+    background-color: #1b2b44;
+    scrollbar-width: thin;
+    width: 7px;
+}
+
+::-webkit-scrollbar:hover {
+    width: 7px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #cccccc;
+    border-radius: 50%;
+    padding: 10%;
 }
 
 p {
     color: #0094de;
-    text-align: justify-center;
-    font-family: titillium;
-    margin-bottom: 0%;
 }
 
 .header {
     background-color: #192021;
-    width: 100%;
-}
-
-.bodyElements {
-    color: #0094de;
-    font-family: titillium;
-    margin-bottom: 0%;
-    font-size: medium;
-    align-items: justify;
 }
 
 .elementButtons {
     background-color: #1b2b44;
     border: none;
     border-radius: 5%;
-    margin-left: 0.7%;
-    width: 90%;
-    max-width: 99%;
     border-bottom: #1b2b44 solid 4px;
+    width: 100%;
+    height: 50px;
+    align-items: center;
+    font-weight: normal;
+    padding: 0;
 }
 
 .elementButtons:hover {
     color: white;
     border-bottom: #e10072 solid 4px;
-    flex-wrap: wrap;
 }
 
 .elementButtons:active {
@@ -52,7 +59,6 @@ p {
     background-color: #192021;
     border: none;
     width: 100%;
-    align-items: auto;
 }
 
 .headerButtonActive {
@@ -61,9 +67,7 @@ p {
 
 .bodyElementText {
     text-align: left;
-    white-space: normal;
-    text-wrap: wrap;
-    font-size: 16px;
+    color: #0094de;
 }
 
 .btn-active {
